fix: change FtIconButton flex layout to prevent vertical text
- Change flex-flow: row wrap to flex-direction: row
- Use inline-flex instead of flex
- Remove justify-content: space-evenly that may cause layout issues

--- a/client/src/components/FtIconButton/FtIconButton.scss
+++ b/client/src/components/FtIconButton/FtIconButton.scss
@@ -1,8 +1,8 @@
 /* stylelint-disable no-descending-specificity */
 .ftIconButton {
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: space-evenly;
+  display: inline-flex;
+  flex-direction: row;
+  align-items: center;
   position: relative;
   line-height: normal;
   user-select: none;
